<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".ui.detail.tvshow.DetailTVShowFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shimmer_detail_tvshow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/item_movies_detail_shimmer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_detail_tvshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shimmerFrameLayout">

        <ImageView
            android:id="@+id/img_detail_show"
            android:layout_width="180dp"
            android:layout_height="240dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_label_title_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_detail_show"
            app:layout_constraintTop_toTopOf="@+id/img_detail_show" />

        <TextView
            android:id="@+id/tv_title_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_show_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_title_show"
            app:layout_constraintStart_toStartOf="@+id/tv_label_title_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_title_show" />

        <TextView
            android:id="@+id/tv_label_tagline_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_show"
            app:layout_constraintStart_toStartOf="@+id/tv_title_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_show" />

        <TextView
            android:id="@+id/tv_tagline_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tagline_show"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_tagline_show"
            app:layout_constraintStart_toStartOf="@+id/tv_label_tagline_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_tagline_show" />

        <TextView
            android:id="@+id/tv_label_genre_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/genre"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_tagline_show"
            app:layout_constraintStart_toStartOf="@+id/tv_tagline_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline_show" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_genre_show"
            app:layout_constraintStart_toStartOf="@+id/tv_label_genre_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_genre_show"
            tools:listitem="@layout/item_genre" />

        <TextView
            android:id="@+id/tv_label_rating_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/rv_genre_show"
            app:layout_constraintStart_toStartOf="@+id/rv_genre_show"
            app:layout_constraintTop_toBottomOf="@+id/rv_genre_show" />

        <RatingBar
            android:id="@+id/rating_bar_show"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            app:layout_constraintStart_toStartOf="@+id/tv_label_rating_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_rating_show" />

        <TextView
            android:id="@+id/tv_released_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/first_air"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_rating_show"
            app:layout_constraintStart_toStartOf="@+id/rating_bar_show"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar_show" />

        <TextView
            android:id="@+id/tv_homepage_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/homepage_show"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_released_show"
            app:layout_constraintStart_toStartOf="@+id/img_detail_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_released_show" />

        <TextView
            android:id="@+id/tv_label_overview_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_released_show"
            app:layout_constraintStart_toStartOf="@+id/img_detail_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_homepage_show" />

        <TextView
            android:id="@+id/tv_overview_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/overview_show"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_overview_show"
            app:layout_constraintStart_toStartOf="@+id/tv_label_overview_show"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_overview_show" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>