<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_shimmer"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:src="@color/blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_label_title_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_shimmer"
        app:layout_constraintTop_toTopOf="@+id/img_shimmer" />

    <TextView
        android:id="@+id/tv_title_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/blue_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_title_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_label_title_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_title_shimmer" />

    <TextView
        android:id="@+id/tv_label_tagline_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tagline"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_title_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_shimmer" />

    <TextView
        android:id="@+id/tv_tagline_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/blue_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_tagline_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_label_tagline_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_tagline_shimmer" />

    <TextView
        android:id="@+id/tv_label_genre_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_tagline_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_tagline_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_tagline_shimmer" />

    <TextView
        android:id="@+id/rv_genre_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/blue_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_genre_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_label_genre_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_genre_shimmer" />

    <TextView
        android:id="@+id/tv_label_rating_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/rating"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/rv_genre_shimmer"
        app:layout_constraintStart_toStartOf="@+id/rv_genre_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/rv_genre_shimmer" />

    <RatingBar
        android:id="@+id/rating_bar_shimmer"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="5"
        app:layout_constraintStart_toStartOf="@+id/tv_label_rating_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_rating_shimmer" />

    <TextView
        android:id="@+id/tv_released_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/blue_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_rating_shimmer"
        app:layout_constraintStart_toStartOf="@+id/rating_bar_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_shimmer" />

    <TextView
        android:id="@+id/tv_homepage_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/blue_light"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_released_shimmer"
        app:layout_constraintStart_toStartOf="@+id/img_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_released_shimmer" />

    <TextView
        android:id="@+id/tv_label_overview_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_released_shimmer"
        app:layout_constraintStart_toStartOf="@+id/img_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_homepage_shimmer" />

    <TextView
        android:id="@+id/tv_overview_shimmer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/blue_light"
        android:minLines="5"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_label_overview_shimmer"
        app:layout_constraintStart_toStartOf="@+id/tv_label_overview_shimmer"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_overview_shimmer" />
</androidx.constraintlayout.widget.ConstraintLayout>